--- a/app/src/main/res/layout/fragment_device_search.xml
+++ b/app/src/main/res/layout/fragment_device_search.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="viewModel"
-            type="com.avc.advanager.login.DeviceSearchViewModel" />
+            type="com.avc.advanager.device.search.DeviceSearchViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -16,7 +16,7 @@
         android:background="@color/white">
 
         <TextView
-            android:id="@+id/text_choose_ip"
+            android:id="@+id/text_search_ip_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
@@ -28,15 +28,16 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <EditText
-            android:id="@+id/editTextTextPersonName"
+            android:id="@+id/edit_text_search_ip_content"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:ems="10"
+            android:text="@={viewModel.typedIP}"
+            android:hint="ex: 192.168.1.158"
             android:minHeight="48dp"
-            android:text="192.168"
-            app:layout_constraintStart_toStartOf="@+id/text_choose_ip"
-            app:layout_constraintTop_toBottomOf="@+id/text_choose_ip" />
+            app:layout_constraintStart_toStartOf="@+id/text_search_ip_title"
+            app:layout_constraintTop_toBottomOf="@+id/text_search_ip_title" />
 
         <Button
             android:id="@+id/button_confirm_ip"
@@ -44,36 +45,74 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:text="Confirm"
-            app:layout_constraintBottom_toBottomOf="@+id/editTextTextPersonName"
-            app:layout_constraintStart_toEndOf="@+id/editTextTextPersonName"
-            app:layout_constraintTop_toTopOf="@+id/editTextTextPersonName" />
+            android:enabled="@{!viewModel.typedIP.empty}"
+            android:onClick="@{()-> viewModel.checkDeviceStatus(viewModel.typedIP)}"
+            app:layout_constraintBottom_toBottomOf="@+id/edit_text_search_ip_content"
+            app:layout_constraintStart_toEndOf="@+id/edit_text_search_ip_content"
+            app:layout_constraintTop_toTopOf="@+id/edit_text_search_ip_content" />
 
         <TextView
-            android:id="@+id/title_choose_ip"
+            android:id="@+id/title_search_choose_ip_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:text="Or Choose IP Position:"
             android:textColor="@color/dark_blue"
             android:textSize="20sp"
-            app:layout_constraintStart_toStartOf="@+id/text_choose_ip"
-            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />
+            app:layout_constraintStart_toStartOf="@+id/text_search_ip_title"
+            app:layout_constraintTop_toBottomOf="@+id/edit_text_search_ip_content" />
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recycler_ip"
-            android:layout_width="0dp"
+        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+            android:id="@+id/layout_swipe_refresh_device_list"
+            android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="16dp"
-            android:layout_marginBottom="24dp"
-            app:ipItems="@{viewModel.ipList}"
-            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/title_choose_ip"
-            tools:listitem="@layout/item_ip" />
+            app:layout_constraintTop_toBottomOf="@+id/title_search_choose_ip_title">
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recycler_ip"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginBottom="24dp"
+                app:ipItems="@{viewModel.ipList}"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/title_search_choose_ip_title"
+                tools:listitem="@layout/item_ip" />
+        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+
+        <ProgressBar
+            android:id="@+id/progressBar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:setupApiStatus="@{viewModel.status}" />
+
+        <TextView
+            android:id="@+id/text_error"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"
+            android:singleLine="false"
+            android:textColor="@color/dark_blue"
+            android:textSize="20sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:setupApiErrorMessage="@{viewModel.error}" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
