Feat - enable register user

--- a/app/src/main/res/layout/dialog_register.xml
+++ b/app/src/main/res/layout/dialog_register.xml
@@ -19,6 +19,8 @@
             android:id="@+id/constraint_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"
             android:background="@drawable/round_recycler"
             android:elevation="4dp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -53,7 +55,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
-                android:text="192.168.1.6"
                 android:textColor="@color/dark_blue"
                 android:textSize="20sp"
                 android:textStyle="bold"
@@ -111,6 +112,7 @@
                 android:ems="10"
                 android:hint="admin"
                 android:minHeight="48dp"
+                android:text="@={viewModel.account}"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/text_register_account_title" />
@@ -136,9 +138,21 @@
                 android:ems="10"
                 android:hint="P@$$w0rD"
                 android:minHeight="48dp"
+                android:text="@={viewModel.password}"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/text_register_password_title" />
+
+            <TextView
+                android:id="@+id/text_error"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:singleLine="false"
+                android:textColor="@color/dark_red"
+                android:textSize="10sp"
+                app:layout_constraintStart_toStartOf="@+id/text_register_ip_title"
+                app:layout_constraintTop_toBottomOf="@+id/edit_text_register_password_content"
+                app:setupErrorMessage="@{viewModel.passwordError}" />
 
             <TextView
                 android:id="@+id/text_register_repeat_password_title"
@@ -149,7 +163,7 @@
                 android:textColor="@color/dark_blue"
                 android:textSize="20sp"
                 app:layout_constraintStart_toStartOf="@+id/text_register_ip_title"
-                app:layout_constraintTop_toBottomOf="@+id/edit_text_register_password_content" />
+                app:layout_constraintTop_toBottomOf="@+id/text_error" />
 
             <EditText
                 android:id="@+id/edit_text_repeat_register_password_content"
@@ -161,22 +175,35 @@
                 android:ems="10"
                 android:hint="P@$$w0rD"
                 android:minHeight="48dp"
+                android:text="@={viewModel.repeatedPassword}"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/text_register_repeat_password_title" />
+
+            <TextView
+                android:id="@+id/text_repeated_password_error"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:singleLine="false"
+                android:textColor="@color/dark_red"
+                android:textSize="10sp"
+                app:layout_constraintStart_toStartOf="@+id/text_register_ip_title"
+                app:layout_constraintTop_toBottomOf="@+id/edit_text_repeat_register_password_content"
+                app:setupErrorMessage="@{viewModel.repeatedPasswordError}" />
 
 
             <Button
                 android:id="@+id/button_register_ip"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="24dp"
+                android:layout_marginTop="16dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginBottom="8dp"
+                android:enabled="@{!(viewModel.repeatedPassword.empty||viewModel.password.empty||viewModel.account.empty||!viewModel.registerButtonEnabled)}"
                 android:text="Register"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="@+id/button_close"
-                app:layout_constraintTop_toBottomOf="@+id/edit_text_repeat_register_password_content" />
+                app:layout_constraintTop_toBottomOf="@+id/text_repeated_password_error" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
