--- a/app/src/main/res/layout/fragment_device_search.xml
+++ b/app/src/main/res/layout/fragment_device_search.xml
@@ -112,7 +112,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:setupApiErrorMessage="@{viewModel.error}" />
+            app:setupErrorMessage="@{viewModel.error}" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
