--- a/app/src/main/res/layout/dialog_login.xml
+++ b/app/src/main/res/layout/dialog_login.xml
@@ -83,6 +83,7 @@
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
                 android:ems="10"
+                android:text="@={viewModel.account}"
                 android:hint="admin"
                 android:minHeight="48dp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -108,6 +109,7 @@
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
                 android:ems="10"
+                android:text="@={viewModel.password}"
                 android:hint="P@$$w0rD"
                 android:minHeight="48dp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -122,6 +124,7 @@
                 android:layout_marginEnd="8dp"
                 android:layout_marginBottom="8dp"
                 android:text="Login"
+                android:enabled="@{!(viewModel.password.empty||viewModel.account.empty)}"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="@+id/button_close"
                 app:layout_constraintTop_toBottomOf="@+id/edit_text_login_password_content" />
