--- a/app/src/main/res/layout/fragment_device_search.xml
+++ b/app/src/main/res/layout/fragment_device_search.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="viewModel"
-            type="com.avc.advanager.device.search.DeviceSearchViewModel" />
+            type="com.avc.advanager.fragment.search.DeviceSearchViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -23,7 +23,7 @@
             android:layout_marginTop="24dp"
             android:text="Enter IP Position:"
             android:textColor="@color/dark_blue"
-            android:textSize="20sp"
+            android:textSize="20dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -58,7 +58,7 @@
             android:layout_marginTop="16dp"
             android:text="Or Choose IP Position:"
             android:textColor="@color/dark_blue"
-            android:textSize="20sp"
+            android:textSize="20dp"
             app:layout_constraintStart_toStartOf="@+id/text_search_ip_title"
             app:layout_constraintTop_toBottomOf="@+id/edit_text_search_ip_content" />
 
@@ -107,7 +107,7 @@
             android:layout_marginEnd="16dp"
             android:singleLine="false"
             android:textColor="@color/dark_blue"
-            android:textSize="20sp"
+            android:textSize="20dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
