--- a/app/src/main/res/layout/item_ip.xml
+++ b/app/src/main/res/layout/item_ip.xml
@@ -8,7 +8,7 @@
         <variable
             name="ip"
             type="String" />
-        <variable name="viewHolder" type="com.avc.advanager.device.search.IPAdapter"/>
+        <variable name="viewHolder" type="com.avc.advanager.fragment.search.IPAdapter"/>
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
