--- a/app/src/main/res/layout/fragment_device_search.xml
+++ b/app/src/main/res/layout/fragment_device_search.xml
@@ -15,6 +15,25 @@
         android:layout_height="match_parent"
         android:background="@color/white">
 
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="@color/dark_blue"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:text="Search"
+                android:textColor="@color/white"
+                android:textSize="29dp" />
+
+        </androidx.appcompat.widget.Toolbar>
+
         <TextView
             android:id="@+id/text_search_ip_title"
             android:layout_width="wrap_content"
@@ -25,7 +44,7 @@
             android:textColor="@color/dark_blue"
             android:textSize="20dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toBottomOf="@+id/toolbar" />
 
         <EditText
             android:id="@+id/edit_text_search_ip_content"
@@ -44,9 +63,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:text="Confirm"
+            android:text="Search"
             android:enabled="@{!viewModel.typedIP.empty}"
-            android:onClick="@{()-> viewModel.checkDeviceStatus(viewModel.typedIP)}"
             app:layout_constraintBottom_toBottomOf="@+id/edit_text_search_ip_content"
             app:layout_constraintStart_toEndOf="@+id/edit_text_search_ip_content"
             app:layout_constraintTop_toTopOf="@+id/edit_text_search_ip_content" />
@@ -66,6 +84,7 @@
             android:id="@+id/layout_swipe_refresh_device_list"
             android:layout_width="match_parent"
             android:layout_height="0dp"
+            android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -88,31 +107,6 @@
                 app:layout_constraintTop_toBottomOf="@+id/title_search_choose_ip_title"
                 tools:listitem="@layout/item_ip" />
         </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
-
-        <ProgressBar
-            android:id="@+id/progressBar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:setupApiStatus="@{viewModel.status}" />
-
-        <TextView
-            android:id="@+id/text_error"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginEnd="16dp"
-            android:singleLine="false"
-            android:textColor="@color/dark_blue"
-            android:textSize="20dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:setupErrorMessage="@{viewModel.error}" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
