--- a/app/src/main/res/layout/fragment_device_search.xml
+++ b/app/src/main/res/layout/fragment_device_search.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="viewModel"
-            type="com.avc.advanager.fragment.search.DeviceSearchViewModel" />
+            type="com.avc.advanager.ui.search.DeviceSearchViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -65,6 +65,7 @@
             android:layout_marginStart="8dp"
             android:text="Search"
             android:enabled="@{!viewModel.typedIP.empty}"
+            android:onClick="@{()->viewModel.checkTypedIp()}"
             app:layout_constraintBottom_toBottomOf="@+id/edit_text_search_ip_content"
             app:layout_constraintStart_toEndOf="@+id/edit_text_search_ip_content"
             app:layout_constraintTop_toTopOf="@+id/edit_text_search_ip_content" />
@@ -108,6 +109,14 @@
                 tools:listitem="@layout/item_ip" />
         </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
+        <TextView android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:setupErrorMessage="@{viewModel.error}"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+
 </layout>
