--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -16,6 +16,10 @@
         <item name="windowNoTitle">true</item>
     </style>
 
+    <style name="ProgressTheme" parent="Widget.AppCompat.ProgressBar">
+        <item name="colorAccent">#3f3a3a</item>
+    </style>
+
     <style name="MessageDialog">
         <item name="android:windowBackground">@color/translucent_80</item>
     </style>
